--- a/core/domain/build.gradle
+++ b/core/domain/build.gradle
@@ -1,7 +1,12 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
+
+apply plugin: 'com.android.library'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     namespace 'com.suprematic.domain'
@@ -32,10 +37,15 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //Dagger - Hilt
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_android_version"
+    implementation "com.google.dagger:hilt-android:$hilt_android_version"
+    kapt "androidx.hilt:hilt-compiler:$hilt_navigation_compose_version"
+    implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose_version"
+
+    // Tests
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "io.mockk:mockk:$mockk_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
+
 }
