--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ buildscript {
 }
 
 plugins {
-    id "com.android.application" version "7.4.0-beta02" apply false
-    id "com.android.library" version "7.4.0-beta02" apply false
+    id "com.android.application" version '7.4.0-beta05' apply false
+    id "com.android.library" version '7.4.0-beta05' apply false
     id "org.jetbrains.kotlin.android" version "1.7.20" apply false
 }
 
